# move-coin

./: Cargo.toml  Move.toml  output.bpl
sources/: MoveCoin.move  OddCoin.move
src/: Move.toml
src/sources/: MoveCoin.move
