[workspace]
resolver = "2"

# [profile.release]
# debug = true

[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
opt-level = 3
debug = 0 # for saving disk space during linking
incremental = false
codegen-units = 16
